font-style change
h3 font-size change @suresh

--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
   background: #000; }
 
 h3 {
-  color: yellow; }
+  color: yellow;
+  font-size: 18px; }
 
 /*# sourceMappingURL=main.css.map */
