--- a/main.sass
+++ b/main.sass
@@ -1,7 +1,9 @@
+@import com-var
+@import responsive_styles
 $_f:yellow
 $main_color:#000    
 body 
     background: $main_color
 h3
-    color: $_f
+    color: $sub_main_color
     font-size: 18px
