--- a/main.css
+++ b/main.css
@@ -1,8 +1,11 @@
+h4 {
+  color: grey; }
+
 body {
   background: #000; }
 
 h3 {
-  color: yellow;
+  color: red;
   font-size: 18px; }
 
 /*# sourceMappingURL=main.css.map */
